Added listener for drag start event

--- a/rsp.html
+++ b/rsp.html
@@ -13,7 +13,7 @@
   <div id="columns">
     <div class="rps" id="rps1">
       <figure>
-        <img src="img/rock.png" alt="Rock" draggable="true">
+        <img src="img/rock.png" id="img1" alt="Rock" draggable="true">
         <figcaption>Rock</figcaption>
       </figure>
     </div>
@@ -31,7 +31,7 @@
     </div>
     <div class="rps" id="dz1">
     <figure>
-      <img src="img/DropZone.png" alt="">
+      <img src="img/DropZone.png" alt="Drop Zone">
       <figcaption>Drop Here</figcaption>
     </figure>
     </div>
