Added payload functionality to items

--- a/rsp.html
+++ b/rsp.html
@@ -19,13 +19,13 @@
     </div>
     <div class="rps" id="rps2">
       <figure>
-        <img src="img/paper.png" alt="Paper" draggable="true">
+        <img src="img/paper.png" id="img2" alt="Paper" draggable="true">
         <figcaption>Paper</figcaption>
       </figure>
     </div>
     <div class="rps" id="rps3">
       <figure>
-        <img src="img/scissors.png" alt="Scissors" draggable="true">
+        <img src="img/scissors.png" id="img3" alt="Scissors" draggable="true">
         <figcaption>Scissors</figcaption>
       </figure>
     </div>
