--- a/rsp.html
+++ b/rsp.html
@@ -10,26 +10,26 @@
 
   <p class="message" id="statusMessage"></p>
 
-  <div id="columns">
-    <div class="rps" id="rps1">
+  <div class="columns">
+    <div class="columns__item" id="rps1">
       <figure>
         <img src="img/rock.png" id="img1" alt="Rock" draggable="true">
         <figcaption>Rock</figcaption>
       </figure>
     </div>
-    <div class="rps" id="rps2">
+    <div class="columns__item" id="rps2">
       <figure>
         <img src="img/paper.png" id="img2" alt="Paper" draggable="true">
         <figcaption>Paper</figcaption>
       </figure>
     </div>
-    <div class="rps" id="rps3">
+    <div class="columns__item" id="rps3">
       <figure>
         <img src="img/scissors.png" id="img3" alt="Scissors" draggable="true">
         <figcaption>Scissors</figcaption>
       </figure>
     </div>
-    <div class="rps" id="dz1">
+    <div class="columns__item" id="dz1">
     <figure>
       <img src="img/DropZone.png" alt="Drop Zone">
       <figcaption>Drop Here</figcaption>
